@@ -1,3 +1,8 @@
+2022-09-26  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>
+
+	* 50658 + test: Src/Modules/pcre.c, Test/V07pcre.ztst: Enable to
+	switch between C/UTF-8 locales in PCRE
+
 2022-09-25  Peter Stephenson  <p.w.stephenson@ntlworld.com>
 
 	* 50648: Functions/Misc/zcalc: Julian Prein: Use ZCALC_HISTFILE
